fix blur on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -37,7 +37,7 @@ body {
 #blur {
   height: 100%;
   width: 100%;
-  position: absolute;
+  position: fixed;
   z-index: 2;
   backdrop-filter: blur(12vmax);
 }
